--- a/DeferredGraphics/imgui.ini
+++ b/DeferredGraphics/imgui.ini
@@ -9,9 +9,10 @@ Size=257,650
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=403,52
-Size=372,280
-Collapsed=1
+Pos=0,583
+Size=351,418
+Collapsed=0
+DockId=0x00000009,0
 
 [Window][Example: Simple layout]
 Pos=60,60
@@ -81,7 +82,7 @@ Collapsed=1
 
 [Window][Settings]
 Pos=0,19
-Size=351,607
+Size=351,511
 Collapsed=0
 DockId=0x00000003,0
 
@@ -91,10 +92,10 @@ Size=236,213
 Collapsed=0
 
 [Window][Profiler]
-Pos=0,628
-Size=351,373
+Pos=0,532
+Size=351,49
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000008,0
 
 [Window][Scene]
 Pos=353,19
@@ -113,11 +114,13 @@ Size=569,442
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1920,982 Split=X
-  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=351,982 Split=Y Selected=0x1C33C293
-    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=291,607 Selected=0x1C33C293
-    DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=291,373 Selected=0x0541D7F0
-  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=1567,982 Split=X
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1171,963 CentralNode=1 Selected=0x18B8C0DE
-    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=394,963 Selected=0xF02CD328
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1920,982 Split=X
+  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=351,982 Split=Y Selected=0x1C33C293
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=291,511 Selected=0x1C33C293
+    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=291,469 Split=Y Selected=0xE927CF2F
+      DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=351,49 Selected=0x0541D7F0
+      DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=351,418 Selected=0xE927CF2F
+  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=1567,982 Split=X
+    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=1171,963 CentralNode=1 Selected=0x18B8C0DE
+    DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=394,963 Selected=0xF02CD328
 
