--- a/DeferredGraphics/DeferredGraphics.vcxproj
+++ b/DeferredGraphics/DeferredGraphics.vcxproj
@@ -164,8 +164,10 @@
     <ClCompile Include="External\Imgui\imgui_impl_glfw.cpp" />
     <ClCompile Include="External\Imgui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="External\Imgui\imgui_widgets.cpp" />
+    <ClCompile Include="LinearAllocator.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Material.cpp" />
+    <ClCompile Include="Memory.cpp" />
     <ClCompile Include="Octree.cpp" />
     <ClCompile Include="RotationBehavior.cpp" />
     <ClCompile Include="Shader.cpp" />
@@ -193,7 +195,9 @@
     <ClInclude Include="External\Imgui\imstb_textedit.h" />
     <ClInclude Include="External\Imgui\imstb_truetype.h" />
     <ClInclude Include="LightComponent.h" />
+    <ClInclude Include="LinearAllocator.h" />
     <ClInclude Include="Material.h" />
+    <ClInclude Include="Memory.h" />
     <ClInclude Include="MeshComponent.h" />
     <ClInclude Include="Octree.h" />
     <ClInclude Include="RenderingSystem.h" />
