--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=257,650
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,613
-Size=441,388
+Pos=0,544
+Size=441,457
 Collapsed=0
 DockId=0x00000009,0
 
@@ -55,8 +55,8 @@ Size=520,598
 Collapsed=0
 
 [Window][Style Editor]
-Pos=591,114
-Size=358,804
+Pos=705,29
+Size=517,804
 Collapsed=0
 
 [Window][Dear ImGui Metrics]
@@ -82,9 +82,9 @@ Collapsed=1
 
 [Window][Settings]
 Pos=0,19
-Size=441,440
+Size=441,350
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000007,0
 
 [Window][Debug Settings]
 Pos=784,39
@@ -92,10 +92,10 @@ Size=236,213
 Collapsed=0
 
 [Window][Profiler]
-Pos=0,461
-Size=441,150
+Pos=0,371
+Size=441,171
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000003,0
 
 [Window][Scene]
 Pos=443,19
@@ -113,13 +113,54 @@ Pos=659,104
 Size=569,442
 Collapsed=0
 
+[Table][0xBF3CBA1D,3]
+Column 0  Width=0
+Column 1  Width=0
+Column 2  Width=0
+
+[Table][0x4DEB2512,3]
+Column 0  Width=0
+Column 1  Width=0
+Column 2  Width=0
+
+[Table][0xC0F825AD,2]
+Column 0  Width=0
+Column 1  Width=0
+
+[Table][0xB8B66D71,2]
+Column 0  Width=0
+Column 1  Width=0
+
+[Table][0x22B77DC7,3]
+Column 0  Width=0 Visible=1 Sort=0v
+Column 1  Width=0 Visible=1
+Column 2  Width=0 Visible=1
+
+[Table][0x10B3760E,3]
+Column 0  Width=0
+Column 1  Width=0
+Column 2  Width=0
+
+[Table][0x6DF052BA,5]
+Column 0  Width=0 Sort=0v
+Column 1  Width=0
+Column 2  Width=0
+Column 3  Width=0
+Column 4  Width=0
+
+[Table][0x46991A63,4]
+Column 0  Width=0 Sort=0v
+Column 1  Width=0
+Column 2  Width=0
+Column 3  Width=0
+
 [Docking][Data]
 DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1920,982 Split=X
   DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=441,982 Split=Y Selected=0x1C33C293
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=291,440 Selected=0x1C33C293
-    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=291,540 Split=Y Selected=0xE927CF2F
-      DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=351,150 Selected=0x0541D7F0
-      DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=351,388 Selected=0xE927CF2F
+    DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=441,350 Selected=0x1C33C293
+    DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=441,630 Split=Y Selected=0x0541D7F0
+      DockNode  ID=0x00000003 Parent=0x00000008 SizeRef=441,171 Selected=0x0541D7F0
+      DockNode  ID=0x00000009 Parent=0x00000008 SizeRef=441,457 Selected=0xE927CF2F
   DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=1477,982 Split=X
     DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=1111,963 CentralNode=1 Selected=0x18B8C0DE
     DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=364,963 Selected=0xF02CD328
