Tracked time for each system and generate a profiler txt file to show any specifics

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,10 +9,10 @@ Size=257,650
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,676
-Size=486,325
+Pos=0,717
+Size=541,284
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000008,0
 
 [Window][Example: Simple layout]
 Pos=60,60
@@ -82,9 +82,9 @@ Collapsed=1
 
 [Window][Settings]
 Pos=0,19
-Size=486,467
+Size=541,410
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000003,0
 
 [Window][Debug Settings]
 Pos=784,39
@@ -92,14 +92,14 @@ Size=236,213
 Collapsed=0
 
 [Window][Profiler]
-Pos=0,488
-Size=486,186
+Pos=0,431
+Size=541,284
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000009,0
 
 [Window][Scene]
-Pos=488,19
-Size=1066,982
+Pos=543,19
+Size=1011,982
 Collapsed=0
 DockId=0x00000004,0
 
@@ -156,12 +156,12 @@ Column 3  Width=0
 
 [Docking][Data]
 DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1920,982 Split=X
-  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=486,982 Split=Y Selected=0x1C33C293
-    DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=441,467 Selected=0x1C33C293
-    DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=441,513 Split=Y Selected=0x0541D7F0
-      DockNode  ID=0x00000003 Parent=0x00000008 SizeRef=441,186 Selected=0x0541D7F0
-      DockNode  ID=0x00000009 Parent=0x00000008 SizeRef=441,325 Selected=0xE927CF2F
-  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=1432,982 Split=X
-    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=1066,963 CentralNode=1 Selected=0x18B8C0DE
+  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=541,982 Split=Y Selected=0x1C33C293
+    DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=441,696 Split=Y Selected=0x1C33C293
+      DockNode  ID=0x00000003 Parent=0x00000007 SizeRef=486,410 Selected=0x1C33C293
+      DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=486,284 Selected=0x0541D7F0
+    DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=441,284 Selected=0xE927CF2F
+  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=1377,982 Split=X
+    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=1011,963 CentralNode=1 Selected=0x18B8C0DE
     DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=364,963 Selected=0xF02CD328
 
