--- a/imgui.ini
+++ b/imgui.ini
@@ -9,10 +9,10 @@ Size=257,650
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,717
-Size=541,284
+Pos=0,703
+Size=471,298
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000007,0
 
 [Window][Example: Simple layout]
 Pos=60,60
@@ -70,8 +70,8 @@ Size=607,921
 Collapsed=0
 
 [Window][Inspector]
-Pos=1556,19
-Size=364,982
+Pos=1486,19
+Size=434,982
 Collapsed=0
 DockId=0x00000005,0
 
@@ -82,7 +82,7 @@ Collapsed=1
 
 [Window][Settings]
 Pos=0,19
-Size=541,410
+Size=471,426
 Collapsed=0
 DockId=0x00000003,0
 
@@ -92,13 +92,13 @@ Size=236,213
 Collapsed=0
 
 [Window][Profiler]
-Pos=0,431
-Size=541,284
+Pos=0,447
+Size=471,254
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000006,0
 
 [Window][Scene]
-Pos=543,19
+Pos=473,19
 Size=1011,982
 Collapsed=0
 DockId=0x00000004,0
@@ -154,14 +154,44 @@ Column 1  Width=0
 Column 2  Width=0
 Column 3  Width=0
 
+[Table][0xD3F25573,3]
+Column 0  Width=0
+Column 1  Width=0
+Column 2  Width=0
+
+[Table][0x343BEAD0,3]
+Column 0  Width=0
+Column 1  Width=0
+Column 2  Width=0
+
+[Table][0xAD32BB6A,6]
+Column 0  Width=0 Visible=1
+Column 1  Width=0 Visible=1
+Column 2  Width=0 Visible=1
+Column 3  Width=0 Visible=1
+Column 4  Width=0 Visible=1
+Column 5  Width=0 Visible=1
+
+[Table][0xC870628D,2]
+Column 0  Width=0
+Column 1  Width=0
+
+[Table][0x891431F2,2]
+Column 0  Width=0
+Column 1  Width=0
+
+[Table][0xFE130164,2]
+Column 0  Width=0
+Column 1  Width=0
+
 [Docking][Data]
 DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1920,982 Split=X
-  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=541,982 Split=Y Selected=0x1C33C293
-    DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=441,696 Split=Y Selected=0x1C33C293
-      DockNode  ID=0x00000003 Parent=0x00000007 SizeRef=486,410 Selected=0x1C33C293
-      DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=486,284 Selected=0x0541D7F0
-    DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=441,284 Selected=0xE927CF2F
-  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=1377,982 Split=X
+  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=471,982 Split=Y Selected=0x1C33C293
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=486,426 Selected=0x1C33C293
+    DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=486,554 Split=Y Selected=0x0541D7F0
+      DockNode  ID=0x00000006 Parent=0x00000009 SizeRef=512,254 Selected=0x0541D7F0
+      DockNode  ID=0x00000007 Parent=0x00000009 SizeRef=512,298 Selected=0xE927CF2F
+  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=1447,982 Split=X
     DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=1011,963 CentralNode=1 Selected=0x18B8C0DE
-    DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=364,963 Selected=0xF02CD328
+    DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=434,963 Selected=0xF02CD328
 
