--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=257,650
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,703
-Size=471,298
+Pos=0,713
+Size=533,288
 Collapsed=0
 DockId=0x00000007,0
 
@@ -60,7 +60,7 @@ Size=517,804
 Collapsed=0
 
 [Window][Dear ImGui Metrics]
-Pos=783,69
+Pos=1000,75
 Size=497,492
 Collapsed=0
 
@@ -70,8 +70,8 @@ Size=607,921
 Collapsed=0
 
 [Window][Inspector]
-Pos=1486,19
-Size=434,982
+Pos=1463,19
+Size=457,982
 Collapsed=0
 DockId=0x00000005,0
 
@@ -82,7 +82,7 @@ Collapsed=1
 
 [Window][Settings]
 Pos=0,19
-Size=471,426
+Size=533,440
 Collapsed=0
 DockId=0x00000003,0
 
@@ -92,14 +92,14 @@ Size=236,213
 Collapsed=0
 
 [Window][Profiler]
-Pos=0,447
-Size=471,254
+Pos=0,461
+Size=533,250
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x0000000A,0
 
 [Window][Scene]
-Pos=473,19
-Size=1011,982
+Pos=535,19
+Size=926,982
 Collapsed=0
 DockId=0x00000004,0
 
@@ -110,8 +110,14 @@ Collapsed=0
 
 [Window][About Dear ImGui]
 Pos=659,104
-Size=569,442
+Size=569,109
 Collapsed=0
+
+[Window][Camera Settings]
+Pos=0,19
+Size=514,399
+Collapsed=0
+DockId=0x00000008,0
 
 [Table][0xBF3CBA1D,3]
 Column 0  Width=0
@@ -185,13 +191,15 @@ Column 0  Width=0
 Column 1  Width=0
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1920,982 Split=X
-  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=471,982 Split=Y Selected=0x1C33C293
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=486,426 Selected=0x1C33C293
-    DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=486,554 Split=Y Selected=0x0541D7F0
-      DockNode  ID=0x00000006 Parent=0x00000009 SizeRef=512,254 Selected=0x0541D7F0
-      DockNode  ID=0x00000007 Parent=0x00000009 SizeRef=512,298 Selected=0xE927CF2F
-  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=1447,982 Split=X
-    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=1011,963 CentralNode=1 Selected=0x18B8C0DE
-    DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=434,963 Selected=0xF02CD328
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1920,982 Split=X
+  DockNode        ID=0x00000001 Parent=0x3BC79352 SizeRef=533,982 Split=Y Selected=0x1C33C293
+    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=486,440 Selected=0x1C33C293
+    DockNode      ID=0x00000009 Parent=0x00000001 SizeRef=486,540 Split=Y Selected=0x0541D7F0
+      DockNode    ID=0x00000006 Parent=0x00000009 SizeRef=368,250 Split=Y Selected=0x0541D7F0
+        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=417,399 Selected=0x8722C6A1
+        DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=417,275 Selected=0x0541D7F0
+      DockNode    ID=0x00000007 Parent=0x00000009 SizeRef=368,288 Selected=0xE927CF2F
+  DockNode        ID=0x00000002 Parent=0x3BC79352 SizeRef=1385,982 Split=X
+    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=926,963 CentralNode=1 Selected=0x18B8C0DE
+    DockNode      ID=0x00000005 Parent=0x00000002 SizeRef=457,963 Selected=0xF02CD328
 
