--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=257,650
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,713
-Size=557,288
+Pos=0,721
+Size=512,280
 Collapsed=0
 DockId=0x00000007,0
 
@@ -70,8 +70,8 @@ Size=607,921
 Collapsed=0
 
 [Window][Inspector]
-Pos=1407,19
-Size=513,982
+Pos=1476,19
+Size=444,982
 Collapsed=0
 DockId=0x00000005,0
 
@@ -82,9 +82,9 @@ Collapsed=1
 
 [Window][Settings]
 Pos=0,19
-Size=557,440
+Size=512,448
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000008,0
 
 [Window][Debug Settings]
 Pos=784,39
@@ -92,14 +92,14 @@ Size=236,213
 Collapsed=0
 
 [Window][Profiler]
-Pos=0,461
-Size=557,250
+Pos=0,469
+Size=512,250
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x0000000B,0
 
 [Window][Scene]
-Pos=559,19
-Size=846,982
+Pos=514,19
+Size=960,982
 Collapsed=0
 DockId=0x00000004,0
 
@@ -117,7 +117,7 @@ Collapsed=0
 Pos=0,19
 Size=514,399
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000006,0
 
 [Table][0xBF3CBA1D,3]
 Column 0  Width=0
@@ -191,15 +191,15 @@ Column 0  Width=0
 Column 1  Width=0
 
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1920,982 Split=X
-  DockNode        ID=0x00000001 Parent=0x3BC79352 SizeRef=557,982 Split=Y Selected=0x1C33C293
-    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=486,440 Selected=0x1C33C293
-    DockNode      ID=0x00000009 Parent=0x00000001 SizeRef=486,540 Split=Y Selected=0x0541D7F0
-      DockNode    ID=0x00000006 Parent=0x00000009 SizeRef=368,250 Split=Y Selected=0x0541D7F0
-        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=417,399 Selected=0x8722C6A1
-        DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=417,275 Selected=0x0541D7F0
-      DockNode    ID=0x00000007 Parent=0x00000009 SizeRef=368,288 Selected=0xE927CF2F
-  DockNode        ID=0x00000002 Parent=0x3BC79352 SizeRef=1361,982 Split=X
-    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=846,963 CentralNode=1 Selected=0x18B8C0DE
-    DockNode      ID=0x00000005 Parent=0x00000002 SizeRef=513,963 Selected=0xF02CD328
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1920,982 Split=X
+  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=512,982 Split=Y Selected=0x1C33C293
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=486,700 Split=Y Selected=0x1C33C293
+      DockNode  ID=0x00000008 Parent=0x00000003 SizeRef=557,448 Selected=0x1C33C293
+      DockNode  ID=0x0000000B Parent=0x00000003 SizeRef=557,250 Selected=0x0541D7F0
+    DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=486,280 Split=Y Selected=0x0541D7F0
+      DockNode  ID=0x00000006 Parent=0x00000009 SizeRef=368,250 Selected=0x0541D7F0
+      DockNode  ID=0x00000007 Parent=0x00000009 SizeRef=368,288 Selected=0xE927CF2F
+  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=1406,982 Split=X
+    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=960,963 CentralNode=1 Selected=0x18B8C0DE
+    DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=444,963 Selected=0xF02CD328
 
