--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=257,650
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,721
-Size=512,280
+Pos=0,723
+Size=512,278
 Collapsed=0
 DockId=0x00000007,0
 
@@ -70,8 +70,8 @@ Size=607,921
 Collapsed=0
 
 [Window][Inspector]
-Pos=1469,19
-Size=451,982
+Pos=1457,19
+Size=463,982
 Collapsed=0
 DockId=0x00000005,0
 
@@ -82,9 +82,9 @@ Collapsed=1
 
 [Window][Settings]
 Pos=0,19
-Size=512,448
+Size=512,702
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000003,0
 
 [Window][Debug Settings]
 Pos=784,39
@@ -92,16 +92,16 @@ Size=236,213
 Collapsed=0
 
 [Window][Profiler]
-Pos=0,469
-Size=512,250
+Pos=514,705
+Size=941,296
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x0000000A,0
 
 [Window][Scene]
 Pos=514,19
-Size=953,982
+Size=941,684
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000008,0
 
 [Window][DockSpace Demo]
 Pos=0,19
@@ -193,13 +193,13 @@ Column 1  Width=0
 [Docking][Data]
 DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1920,982 Split=X
   DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=512,982 Split=Y Selected=0x1C33C293
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=486,700 Split=Y Selected=0x1C33C293
-      DockNode  ID=0x00000008 Parent=0x00000003 SizeRef=557,448 Selected=0x1C33C293
-      DockNode  ID=0x0000000B Parent=0x00000003 SizeRef=557,250 Selected=0x0541D7F0
-    DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=486,280 Split=Y Selected=0x0541D7F0
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=486,702 Selected=0x1C33C293
+    DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=486,278 Split=Y Selected=0x0541D7F0
       DockNode  ID=0x00000006 Parent=0x00000009 SizeRef=368,250 Selected=0x0541D7F0
       DockNode  ID=0x00000007 Parent=0x00000009 SizeRef=368,288 Selected=0xE927CF2F
   DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=1406,982 Split=X
-    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=953,963 CentralNode=1 Selected=0x18B8C0DE
-    DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=451,963 Selected=0xF02CD328
+    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=941,963 Split=Y Selected=0x18B8C0DE
+      DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=953,684 CentralNode=1 Selected=0x18B8C0DE
+      DockNode  ID=0x0000000A Parent=0x00000004 SizeRef=953,296 Selected=0x0541D7F0
+    DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=463,963 Selected=0xF02CD328
 
